test/error/ConsoleWriteObjectPtr.fu
public class Test
{
	public static bool Run()
	{
		Test() o;
		Test p = o;
		Console.WriteLine(p); //ERROR: Cannot convert 'Test' to 'printable'
		return true;
	}
}
